Fixed user name text align at the profile page

--- a/src/main/resources/static/css/profile.less
+++ b/src/main/resources/static/css/profile.less
@@ -2,7 +2,7 @@
 @import "_background.less";
 @import "_mediaqueries.less";
 
-#playerName {
+#userID {
   text-align: center;
   margin-top: 15px;
   margin-bottom: 15px;
